メッセージの汎用化 authoridのkeyを動的に変更できるように修正
